Fix thumbail issue on mobile

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -43,3 +43,7 @@ html {
 .react-multiple-carousel__arrow:hover {
   background: #EDF2F7 !important;
 }
+
+.thumbnail {
+  min-width: 245px;
+}
